--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ComparaOnline Software Engineer Test",
   "main": "index.js",
   "scripts": {
+    "after-30-days": "node src/index.js",
     "test": "mocha spec/*.js"
   },
   "repository": {
